--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,50 @@
-# Compiled class file
+# =====================
+# Java / Spring Boot
+# =====================
+
+# Maven / Gradle
+/target/
+/build/
+
+# IntelliJ
+/.idea/
+/*.iml
+
+# Eclipse
+/.classpath
+/.project
+/.settings/
+
+# VS Code
+/.vscode/
+
+# Compiled classes
 *.class
 
-# Log file
+# Logs
 *.log
 
-# BlueJ files
-*.ctxt
+# OS / temp files
+*.tmp
+*.swp
+.DS_Store
+Thumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# =====================
+# Application configs / secrets
+# =====================
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Don't commit real credentials or API keys
+/src/main/resources/application.properties
+/src/main/resources/application.yml
+.env
+*.key
+*.jks
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# =====================
+# Optional
+# =====================
+
+# Node / frontend files (if any)
+node_modules/
+dist/
